[package]
name = "hewn"
version = "0.1.0"
edition = "2025"
description = "Terminal and WASM game engine, fun and simple."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshua-mason/hewn"
keywords = ["game", "engine", "wasm", "terminal"]
categories = ["game-engines"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
termion = "4"

[lib]
crate-type = ["cdylib", "rlib"]