[package]
name = "hewn"
version = "0.0.1-alpha.2"
edition = "2021"
description = "A simple game engine built for educational purposes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshua-mason/hewn"
keywords = ["game", "engine", "wasm", "terminal"]
categories = ["game-engines"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
termion = "4"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["examples/snake", "examples/asciibird", "examples/asciijump"]