[package]
name = "hewn"
version = "0.0.1-alpha.5"
edition = "2021"
description = "A simple game engine built for educational purposes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshua-mason/hewn"
keywords = ["game", "engine", "wasm", "terminal"]
categories = ["game-engines"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = "0.8"
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "26.0.1"
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
termion = "4"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["examples/snake", "examples/asciibird", "examples/asciijump"]

[profile.release]
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
