[package]
name = "snake"
edition = "2021"

[dependencies]
hewn = { path = "../../" }
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = "0.8"
winit = "0.30.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
termion = "4"

[lib]
crate-type = ["cdylib", "rlib"]
